<resources>
    <string name="app_name">BookStoreApp</string>

    <!-- Label for overflow menu option that inserts fake entry data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all entry data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Entries</string>

    <!-- Title for the activity to add a new entry [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_entry">Add an Entry</string>

    <!-- Title for the activity to edit a entry [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_entry">Edit an Entry</string>

    <!-- Label for editor menu option to save entry and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current entry [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <string name="save_error">Error with saving entry</string>

    <string name="save_success">Entry saved</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding an entry</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current entry [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this entry?</string>

    <!-- Dialog button text for the option to confirm deleting the current entry [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current entry [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current entry was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_entry_successful">Entry deleted</string>

    <!-- Toast message in editor when current entry has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_entry_failed">Error with deleting entry</string>

    <string name="blank_entry">One or more fields are blank</string>

    <string name="product_name">Product Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="product_price">Price</string>
    <string name="quantity">Quantity</string>

</resources>
