<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/product_name" />

    <EditText
        android:id="@+id/edit_product_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/product_name" />

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/supplier_name" />

    <EditText
        android:id="@+id/edit_supplier_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/supplier_name" />

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/supplier_phone" />

    <EditText
        android:id="@+id/edit_supplier_phone"
        style="@style/EditorFieldStyle"
        android:hint="@string/supplier_phone"
        android:inputType="phone" />

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/product_price" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:text="$" />

        <EditText
            android:id="@+id/edit_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/product_price"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <TextView
        style="@style/HeaderStyle"
        android:text="@string/quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:hint="@string/quantity"
            android:inputType="number" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="48dp"
            android:onClick="decrementQuantity"
            android:text="-" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:onClick="incrementQuantity"
            android:text="+" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="callSupplier"
        android:text="Call Supplier" />


</LinearLayout>